# ACE-Step

./: .gitignore  ACCOMPANIMENT_IMPLEMENTATION.md  pyproject.toml  trainer_accompaniment.py
acestep/: accompaniment_dataset.py  audio_utils.py  config_schemas.py  pipeline_ace_step.py  text2music_dataset.py
acestep/language_segmentation/: LangSegment.py
acestep/models/: ace_step_transformer.py  attention.py  control_encoder.py
acestep/models/lyrics_utils/: lyric_tokenizer.py  zh_num2words.py
acestep/music_dcae/: music_dcae_pipeline.py
config/accompaniment/: controlnet_base.json  image2image_base.json  optuna_search.json  test_config.json
doc/: CLAUDE.md
scripts/: compare_models.py  infer_accompaniment.py  optuna_search.py  train_controlnet.py  train_image2image.py
